--- a/tests/integration/specs/heartbeat_test.toml
+++ b/tests/integration/specs/heartbeat_test.toml
@@ -13,6 +13,9 @@ actions = ["End_Test 7000", "Add_Node node2 100"]
     protocol = "TMembership"
     x = 0.0
     y = 0.0
+    [initial_nodes.node1.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node1.radio_short]
         reliability = 1.0
         delay = 0
@@ -27,6 +30,9 @@ actions = ["End_Test 7000", "Add_Node node2 100"]
     protocol = "TMembership"
     x = 0.0
     y = 0.0
+    [available_nodes.node2.velocity]
+        x = 0.0
+        y = 0.0
     [available_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
