--- a/tests/integration/specs/naive_basic_test.toml
+++ b/tests/integration/specs/naive_basic_test.toml
@@ -13,6 +13,9 @@ actions = ["End_Test 3000", "Ping node1 node3 1500"]
     protocol = "NaiveRouting"
     x = -60.0
     y = 0.0
+    [initial_nodes.node1.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node1.radio_short]
         reliability = 1.0
         delay = 0
@@ -26,6 +29,9 @@ actions = ["End_Test 3000", "Ping node1 node3 1500"]
     protocol = "NaiveRouting"
     x = 0.0
     y = 0.0
+    [initial_nodes.node2.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
@@ -39,6 +45,9 @@ actions = ["End_Test 3000", "Ping node1 node3 1500"]
     protocol = "NaiveRouting"
     x = 60.0
     y = 0.0
+    [initial_nodes.node3.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
         delay = 0 #Not used in device_mode
