--- a/tests/integration/specs/rgr_basic_test.toml
+++ b/tests/integration/specs/rgr_basic_test.toml
@@ -9,6 +9,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -110.0
     y = 0.0
+    [initial_nodes.node1.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node1.radio_short]
         reliability = 1.0
         interface_name = "wlan0"
@@ -22,6 +25,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -55.0
     y = 55.0
+    [initial_nodes.node2.velocity]
+        x = 1.0
+        y = 1.0
     [initial_nodes.node2.radio_short] 
         reliability = 1 
         interface_name = "wlan0" 
@@ -36,6 +42,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -55.0
     y = -55.0
+    [initial_nodes.node3.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node3.radio_short] 
         reliability = 1 
         range = 100.0
@@ -49,6 +58,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 0.0
     y = 0.0
+    [initial_nodes.node4.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node4.radio_short] 
         reliability = 1 
         range = 100.0
@@ -62,6 +74,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 0.0
     y = 110.0
+    [initial_nodes.node5.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node5.radio_short] 
         reliability = 1 
         range = 100.0
@@ -75,6 +90,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 0.0
     y = -110.0
+    [initial_nodes.node6.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node6.radio_short] 
         reliability = 1 
         range = 100.0
@@ -88,6 +106,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 27.0
     y = 55.0
+    [initial_nodes.node7.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node7.radio_short] 
         reliability = 1 
         range = 100.0
@@ -101,6 +122,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 27.0
     y = -55.0
+    [initial_nodes.node8.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node8.radio_short] 
         reliability = 1 
         delay = 0 
@@ -115,6 +139,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 55.0
     y = 110.0
+    [initial_nodes.node9.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node9.radio_short] 
         reliability = 1 
         range = 100.0
@@ -128,6 +155,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 55.0
     y = 0.0
+    [initial_nodes.node10.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node10.radio_short] 
         reliability = 1 
         range = 100.0
@@ -141,6 +171,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 55.0
     y = -110.0
+    [initial_nodes.node11.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node11.radio_short] 
         reliability = 1 
         range = 100.0
@@ -154,6 +187,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 82.0
     y = 55.0
+    [initial_nodes.node12.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node12.radio_short] 
         reliability = 1 
         range = 100.0
@@ -167,6 +203,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 82.0
     y = -55.0
+    [initial_nodes.node13.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node13.radio_short] 
         reliability = 1 
         range = 100.0
@@ -180,6 +219,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 110.0
     y = 0.0
+    [initial_nodes.node14.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node14.radio_short] 
         reliability = 1 
         interface_name = "wlan0" 
@@ -193,6 +235,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -165.0
     y = 0.0
+    [initial_nodes.node15.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node15.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -206,6 +251,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -120.0
     y = 55.0
+    [initial_nodes.node16.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node16.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -219,6 +267,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -45.0
     y = 110.0
+    [initial_nodes.node17.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node17.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -232,6 +283,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -10.0
     y = 165.0
+    [initial_nodes.node18.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node18.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -245,6 +299,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 27.0
     y = 240.0
+    [initial_nodes.node19.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node19.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -258,6 +315,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 65.0
     y = 165.0
+    [initial_nodes.node20.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node20.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -271,6 +331,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 92.0
     y = 110.0
+    [initial_nodes.node21.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node21.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -284,6 +347,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 120.0
     y = 55.0
+    [initial_nodes.node22.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node22.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -297,6 +363,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 165.0
     y = 0.0
+    [initial_nodes.node23.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node23.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -310,6 +379,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 120.0
     y = -55.0
+    [initial_nodes.node24.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node24.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -323,6 +395,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 92.0
     y = -110.0
+    [initial_nodes.node25.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node25.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -336,6 +411,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 65.0
     y = -165.0
+    [initial_nodes.node26.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node26.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -349,6 +427,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = 27.0
     y = -240.0
+    [initial_nodes.node27.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node27.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -362,6 +443,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -10.0
     y = -165.0
+    [initial_nodes.node28.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node28.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -375,6 +459,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -45.0
     y = -110.0
+    [initial_nodes.node29.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node29.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
@@ -388,6 +475,9 @@ actions = ["ping node2 node24 3000 ", "End_Test 6000"]
     protocol = "ReactiveGossip"
     x = -120.0
     y = -55.0
+    [initial_nodes.node30.velocity]
+        x = 0.0
+        y = 0.0
     [initial_nodes.node30.radio_short] 
         reliability = 1
         interface_name = "wlan0" 
