--- a/tests/integration/specs/join_test.toml
+++ b/tests/integration/specs/join_test.toml
@@ -1,5 +1,8 @@
 name = "join_test"
-actions = ["End_Test 3000", "Add_Node node2 200"]
+duration = 3000
+width = 200
+height = 200
+actions = ["Add_Node node2 200"]
 
 [initial_nodes.node1]
     worker_name = "node1"
@@ -14,7 +17,6 @@ actions = ["End_Test 3000", "Add_Node node2 200"]
         y = 0.0
     [initial_nodes.node1.radio_short]
         reliability = 1.0
-        delay = 0
         interface_name = "wlan0"
         range = 100.0
 
@@ -29,8 +31,8 @@ actions = ["End_Test 3000", "Add_Node node2 200"]
     [available_nodes.node2.velocity]
         x = 0.0
         y = 0.0
-    [available_nodes.node2.radio_short] #Short-range radio
-        reliability = 1 #Not used in device_mode
-        delay = 0 #Not used in device_mode
-        interface_name = "wlan0" #Not used in simulated_mode
+    [available_nodes.node2.radio_short]
+        reliability = 1
+        delay = 0 
+        interface_name = "wlan1"
         range = 100.0
