--- a/tests/integration/specs/killnode_test.toml
+++ b/tests/integration/specs/killnode_test.toml
@@ -3,7 +3,10 @@
 #We used 1 initial node and add a second node shortly after to a potential deadlock in which the 2 process
 #start at the exact same time and end up waiting on the other to responde to the heartbeat message.
 name = "heartbeat_test"
-actions = ["End_Test 1000", "Kill_Node node2 500"]
+duration = 1000
+width = 200
+height = 200
+actions = ["Kill_Node node2 500"]
 
 [initial_nodes.node1]
     worker_name = "node1"
@@ -18,12 +21,10 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
         y = 0.0
     [initial_nodes.node1.radio_short]
         reliability = 1.0
-        delay = 0
         interface_name = "wlan0"
         range = 100.0
     [initial_nodes.node1.radio_long]
         reliability = 1.0
-        delay = 0
         interface_name = "wlan1"
         range = 100.0
 
@@ -40,12 +41,10 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
         y = 0.0
     [initial_nodes.node2.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
-        delay = 0 #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
         range = 100.0
     [initial_nodes.node2.radio_long] #Long-range radio
         reliability = 1 #Not used in device_mode
-        delay = 0 #Not used in device_mode
         interface_name = "wlan1" #Not used in simulated_mode
         range = 100.0
 
@@ -62,12 +61,10 @@ actions = ["End_Test 1000", "Kill_Node node2 500"]
         y = 0.0
     [initial_nodes.node3.radio_short] #Short-range radio
         reliability = 1 #Not used in device_mode
-        delay = 0 #Not used in device_mode
         interface_name = "wlan0" #Not used in simulated_mode
         range = 100.0
     [initial_nodes.node3.radio_long] #Long-range radio
         reliability = 1 #Not used in device_mode
-        delay = 0 #Not used in device_mode
         interface_name = "wlan1" #Not used in simulated_mode
         range = 100.0
 
