--- a/tests/integration/specs/naive_basic_test.toml
+++ b/tests/integration/specs/naive_basic_test.toml
@@ -3,7 +3,10 @@
 #We used 1 initial node and add a second node shortly after to a potential deadlock in which the 2 process
 #start at the exact same time and end up waiting on the other to responde to the heartbeat message.
 name = "naive_basic_test"
-actions = ["End_Test 3000", "Ping node1 node3 1500"]
+duration = 3000
+width = 400
+height = 400
+actions = ["Ping node1 node3 1500"]
 
 [initial_nodes.node1]
     worker_name = "node1"
@@ -11,8 +14,8 @@ actions = ["End_Test 3000", "Ping node1 node3 1500"]
     random_seed = 123
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
-    x = -60.0
-    y = 0.0
+    x = 60.0
+    y = 100.0
     [initial_nodes.node1.velocity]
         x = 0.0
         y = 0.0
@@ -27,8 +30,8 @@ actions = ["End_Test 3000", "Ping node1 node3 1500"]
     random_seed = 456
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
-    x = 0.0
-    y = 0.0
+    x = 100.0
+    y = 100.0
     [initial_nodes.node2.velocity]
         x = 0.0
         y = 0.0
@@ -43,8 +46,8 @@ actions = ["End_Test 3000", "Ping node1 node3 1500"]
     random_seed = 789
     operation_mode = "Simulated"
     protocol = "NaiveRouting"
-    x = 60.0
-    y = 0.0
+    x = 120.0
+    y = 100.0
     [initial_nodes.node3.velocity]
         x = 0.0
         y = 0.0
