--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ serde_cbor = "0.6"
 serde_json = "1.0"
 clap = "2.19.0"
 slog = "2.4.1"
-# slog-stream = "1.2.0"
 slog-term = "2.4.0"
 slog-json = "2.3.0"
 slog-stdlog = "3.0.2"
@@ -34,7 +33,7 @@ pretty_assertions = "0.5.1"
 lazy_static = "1.2.0"
 md5 = "0.6.0"
 base64 = "0.10.0"
-rusqlite = "0.15.0"
+rusqlite = { version = "0.15.0",  features = ["bundled"] }
 
 [dev-dependencies]
 assert_cli = "0.5"
