--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ lazy_static = "1.3.0"
 md5 = "0.6.1"
 base64 = "0.10.1"
 rusqlite = { version = "0.16.0",  features = ["bundled"] }
+threadpool = "1.7.1"
 
 [dev-dependencies]
 assert_cli = "0.6.3"
