--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ md5 = "0.6.1"
 base64 = "0.10.1"
 rusqlite = { version = "0.16.0",  features = ["bundled"] }
 threadpool = "1.7.1"
+color-backtrace = "0.1.3"
 
 [dev-dependencies]
 assert_cli = "0.6.3"
