--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ base64 = "0.10.1"
 rusqlite = { version = "0.16.0",  features = ["bundled"] }
 threadpool = "1.7.1"
 color-backtrace = "0.1.3"
+libc = "0.2.55"
 
 [dev-dependencies]
 assert_cli = "0.6.3"
