--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ pretty_assertions = "0.6.1"
 lazy_static = "1.3.0"
 md5 = "0.6.1"
 base64 = "0.10.1"
-rusqlite = { version = "0.16.0",  features = ["bundled"] }
+rusqlite = { version = "0.16.0",  features = ["bundled", "functions"] }
 threadpool = "1.7.1"
 color-backtrace = "0.1.3"
 libc = "0.2.55"
