--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,10 @@ rusqlite = { version = "0.16.0",  features = ["bundled", "functions"] }
 threadpool = "1.7.1"
 color-backtrace = "0.1.3"
 libc = "0.2.55"
+sx1276 = { git = "https://github.com/doctorn/sx1276"}
+
+[target.'cfg(target_os = "linux")'.dependencies]
+linux-embedded-hal = "0.2.2"
 
 [dev-dependencies]
 assert_cli = "0.6.3"
