--- a/tests/experiments/specs/lora_wifi_beacon_placement/rogue1.toml
+++ b/tests/experiments/specs/lora_wifi_beacon_placement/rogue1.toml
@@ -1,8 +1,8 @@
-worker_name = "rogue2"
-worker_id = "0fe453ddfda62d5454de89d63ca1a11f"
-work_dir = "/tmp/lora_wifi_beacon_placement307062120"
-random_seed = 3573741273
-operation_mode = "Device"
+worker_name = "rogue1"
+worker_id = "d58c2de34089d0dc012e2a0837f35801"
+work_dir = "/tmp/lora_wifi_beacon_placement3759956228"
+random_seed = 4177468631
+operation_mode = "Simulated"
 protocol = "LoraWifiBeacon"
 x = 0.0 #ignored
 y = 0.0 #ignored
@@ -12,7 +12,7 @@ y = 0.0
 
 [radio_short]
 reliability = 1.0 #ignored
-interface_name = "en9"
+interface_name = "wlan0"
 range = 20.0 #ignored
 
 [radio_long]
