Minor changes for deployment

--- a/tests/experiments/deployments/lora_wifi_beacon_placement.toml
+++ b/tests/experiments/deployments/lora_wifi_beacon_placement.toml
@@ -8,159 +8,159 @@ args = ["build", "--release"]
 [hosts.rogue1]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue1.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue2]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue2.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue3]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue3.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue4]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue4.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue5]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue5.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue6]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue6.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue7]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue7.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue8]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue8.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue9]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue9.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue10]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue10.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue11]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue11.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue12]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue12.toml",
-        "--work_dir", "",
+        "--work_dir", "~/results/lora_wifi_beacon_placement",
         "--register_worker", "false",
         "--accept_commands", "false",
-        "--log_term", "true"]
+        "--log_to_terminal", "true"]
 
 [hosts.rogue13]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue13.toml",
-       "--work_dir", "",
+       "--work_dir", "~/results/lora_wifi_beacon_placement",
        "--register_worker", "false",
        "--accept_commands", "false",
-       "--log_term", "true"]
+       "--log_to_terminal", "true"]
 
 [hosts.rogue14]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue14.toml",
-       "--work_dir", "",
+       "--work_dir", "~/results/lora_wifi_beacon_placement",
        "--register_worker", "false",
        "--accept_commands", "false",
-       "--log_term", "true"]
+       "--log_to_terminal", "true"]
 
 [hosts.rogue15]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue15.toml",
-       "--work_dir", "",
+       "--work_dir", "~/results/lora_wifi_beacon_placement",
        "--register_worker", "false",
        "--accept_commands", "false",
-       "--log_term", "true"]
+       "--log_to_terminal", "true"]
 
 [hosts.rogue16]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue16.toml",
-       "--work_dir", "",
+       "--work_dir", "~/results/lora_wifi_beacon_placement",
        "--register_worker", "false",
        "--accept_commands", "false",
-       "--log_term", "true"]
+       "--log_to_terminal", "true"]
 
 [hosts.rogue17]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue17.toml",
-       "--work_dir", "",
+       "--work_dir", "~/results/lora_wifi_beacon_placement",
        "--register_worker", "false",
        "--accept_commands", "false",
-       "--log_term", "true"]
+       "--log_to_terminal", "true"]
 
 [hosts.rogue18]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue18.toml",
-       "--work_dir", "",
+       "--work_dir", "~/results/lora_wifi_beacon_placement",
        "--register_worker", "false",
        "--accept_commands", "false",
-       "--log_term", "true"]
+       "--log_to_terminal", "true"]
 
 [hosts.rogue19]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue19.toml",
-       "--work_dir", "",
+       "--work_dir", "~/results/lora_wifi_beacon_placement",
        "--register_worker", "false",
        "--accept_commands", "false",
-       "--log_term", "true"]
+       "--log_to_terminal", "true"]
 
 [hosts.rogue20]
 command = "./target/release/worker_cli"
 args = ["--config", "tests/experiments/specs/lora_wifi_beacon_placement/rogue20.toml",
-       "--work_dir", "",
+       "--work_dir", "~/results/lora_wifi_beacon_placement",
        "--register_worker", "false",
        "--accept_commands", "false",
-       "--log_term", "true"]
+       "--log_to_terminal", "true"]
