Add naive routing experiment

--- a/tests/experiments/specs/lora_wifi_beacon_placement/rogue3.toml
+++ b/tests/experiments/specs/lora_wifi_beacon_placement/rogue3.toml
@@ -2,7 +2,7 @@ worker_name = "rogue3"
 worker_id = "b2cb3a2ad90c3802a20fce2ad1e0079f"
 work_dir = "/tmp/lora_wifi_beacon_placement3759956228"
 random_seed = 3103899972
-operation_mode = "Simulated"
+operation_mode = "Device"
 protocol = "LoraWifiBeacon"
 x = 0.0 #ignored
 y = 0.0 #ignored
