--- a/tests/experiments/specs/naive_routing/rogue12.toml
+++ b/tests/experiments/specs/naive_routing/rogue12.toml
@@ -1,9 +1,9 @@
-worker_name = "rogue1"
-worker_id = "d58c2de34089d0dc012e2a0837f35801"
-work_dir = "/tmp/lora_wifi_beacon_placement3759956228"
-random_seed = 4177468631
+worker_name = "rogue12"
+worker_id = "a6c7e11b879366bdd39ab0c8ec903b8a"
+work_dir = "/tmp/naive_routing307062120"
+random_seed = 1898157074
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+protocol = "NaiveRouting"
 x = 0.0 #ignored
 y = 0.0 #ignored
 [velocity]
