--- a/tests/experiments/specs/naive_routing/rogue10.toml
+++ b/tests/experiments/specs/naive_routing/rogue10.toml
@@ -1,9 +1,9 @@
-worker_name = "rogue1"
-worker_id = "d58c2de34089d0dc012e2a0837f35801"
-work_dir = "/tmp/lora_wifi_beacon_placement3759956228"
-random_seed = 4177468631
+worker_name = "rogue10"
+worker_id = "5493548a3f154df5b9203b23f66afd64"
+work_dir = "/tmp/naive_routing307062120"
+random_seed = 2029819001
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+protocol = "NaiveRouting"
 x = 0.0 #ignored
 y = 0.0 #ignored
 [velocity]
