--- a/tests/experiments/specs/naive_routing/rogue3.toml
+++ b/tests/experiments/specs/naive_routing/rogue3.toml
@@ -1,9 +1,9 @@
-worker_name = "rogue1"
-worker_id = "d58c2de34089d0dc012e2a0837f35801"
-work_dir = "/tmp/lora_wifi_beacon_placement3759956228"
-random_seed = 4177468631
+worker_name = "rogue3"
+worker_id = "b2cb3a2ad90c3802a20fce2ad1e0079f"
+work_dir = "/tmp/naive_routing3759956228"
+random_seed = 3103899972
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+protocol = "NaiveRouting"
 x = 0.0 #ignored
 y = 0.0 #ignored
 [velocity]
