--- a/tests/experiments/specs/naive_routing/rogue5.toml
+++ b/tests/experiments/specs/naive_routing/rogue5.toml
@@ -1,9 +1,9 @@
-worker_name = "rogue1"
-worker_id = "d58c2de34089d0dc012e2a0837f35801"
-work_dir = "/tmp/lora_wifi_beacon_placement3759956228"
-random_seed = 4177468631
+worker_name = "rogue5"
+worker_id = "46a0c118c666d832477debba36b3c44b"
+work_dir = "/tmp/naive_routing307062120"
+random_seed = 3365506767
 operation_mode = "Device"
-protocol = "LoraWifiBeacon"
+protocol = "NaiveRouting"
 x = 0.0 #ignored
 y = 0.0 #ignored
 [velocity]
