--- a/tests/experiments/specs/naive_routing/rogue2.toml
+++ b/tests/experiments/specs/naive_routing/rogue2.toml
@@ -12,7 +12,7 @@ y = 0.0
 
 [radio_short]
 reliability = 1.0 #ignored
-interface_name = "en9"
+interface_name = "wlan0"
 range = 20.0 #ignored
 
 [radio_long]
