--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "Copyright"
 readme = "README.md"
 documentation = "https://github.com/Dash83/mesh_simulator"
 description = "Simulation platform for a mesh network."
+edition = "2018"
 
 [dependencies]
 rand = "0.6.5"
